--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+[data-nextjs-scroll-focus-boundary] {
+  display: contents;
+}
+
 a {
   color: inherit;
   text-decoration: none;
