--- a/app/menus/newnote/NewNote.module.sass
+++ b/app/menus/newnote/NewNote.module.sass
@@ -14,7 +14,7 @@
 .menuItemContainer
     display: flex
     flex-direction: column
-    gap: 15px
+    gap: 18px
     align-items: center
     width: 100%
     margin-top: 10px
@@ -28,12 +28,15 @@
     justify-content: space-between
     height: 48px
     padding: 5px
+    border-radius: 5px
 
 .dateInput
     gap: 10px
     display: flex
     input
         width: 50px
+        background: black
+        color: white
 
 .invalidForm
     border: 1px solid red !important
@@ -43,7 +46,7 @@
 
 .menuItem span
     display: flex
-    line-height: 35px
+    line-height: 38px
     color: white
     font-size: 18px
     margin-left: 10px
@@ -63,7 +66,11 @@
     gap: 20px
     margin-right: 20px
     div
+        display: flex
         cursor: pointer
+    @media (max-width: 768px)
+        div
+            cursor: default
 
 @mixin priorityButton($color)
     width: 20px
@@ -71,7 +78,6 @@
     border-radius: 40px
     background: $color
     border: none
-
 
 .priorityLowButton
     +priorityButton($color: #78ACD5)
@@ -92,7 +98,7 @@
 .saveButton
     width: 90%
     font-size: 25px
-    line-height: 36px
+    line-height: 38px
     display: flex
     flex-direction: row
     justify-content: center
